<resources>
    <string name="app_name">Squeamish</string>
    <string name="action_settings">Settings</string>
    <string name="action_changePassword">Change Password</string>
    <string name="action_logout">Logout</string>
    <string name="app_font_bold">roboto_bold.ttf</string>
    <string name="app_font_medium">roboto_medium.ttf</string>
    <string name="app_font_regular">roboto_regular.ttf</string>
    <string name="app_font_thin">roboto_thin.ttf</string>
    <string name="app_font_light">roboto_light.ttf</string>
    <string name="splash_fragment_label">Splash Fragment</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="signup_fragment_label">Signup Fragment</string>
    <string name="home_fragment_label">Home Fragment</string>
    <string name="dashboard_fragment_label">Dashboard Fragment</string>
    <string name="dashboard_menu_fragment_label">Dashboard Menu Fragment</string>
    <string name="webView_fragment_label">Dashboard Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="splash_Txt">Splash</string>
    <string name="fa_icon_areachart">&#xf1fe;</string>
    <string name="applicant_address_label">Applicant Address Detail</string>
    <string name="applicant_address_confirmed_label">Address Confirm as given <font color='#ff0000' ><b>*</b></font></string>
    <string name="applicant_address_belongs_label">Is this address belongs to applicant ? <font color='#ff0000' ><b>*</b></font></string>
    <string name="applicant_address_VisitHouse_label">During Visit House is Open ? <font color='#ff0000' ><b>*</b></font></string>
    <string name="applicant_PersonMet_label">Name of the Person Met <font color='#ff0000' ><b>*</b></font></string>
    <string name="applicant_Relation_Applicant_label">Relation with Applicant <font color='#ff0000' ><b>*</b></font></string>
    <string name="applicant_MobileNoOfPersonMet_label">Mobile No of Person Met</string>
    <string name="applicant_Age_label">Age</string>
    <string name="applicant_MaritalStatus_label">Marital Status *</string>
    <string name="applicant_DetailsOfTotalFamilyMembers_label">Details of Total Family Members</string>
    <string name="applicant_Relation_label">Relation</string>
    <string name="applicant_MemberCount_label">Member Count</string>
    <string name="applicant_EarningCount_label">Earning Count</string>
    <string name="applicant_TotalFamilyMembers_label">Total Family members <font color='#ff0000' ><b>*</b></font></string>
    <string name="applicant_TotalEarningMember_label">Total Earning Member <font color='#ff0000' ><b>*</b></font></string>
    <string name="applicant_HouseOwnership_label">House Ownership <font color='#ff0000' ><b>*</b></font></string>
    <string name="applicant_PermanentAddress_label">Permanent Address</string>
    <string name="applicant_MonthlyRentAmount_label">Monthly Rent Amount</string>
    <string name="applicant_LandlordName_label">Landlord Name</string>
    <string name="applicant_LandlordMobileNo_label">Landlord Mobile No</string>
    <string name="applicant_StayingAtCurrentAddress_label">Staying at current address (In Years) <font color='#ff0000' ><b>*</b></font></string>
    <string name="applicant_ElectricityBill_label">Name in Electricity Bill</string>
    <string name="applicant_KNo_label">K No</string>
    <string name="applicant_UnitConsumedLastMonth_label">Unit Consumed last Month</string>
    <string name="applicant_HouseLocality_label">House Locality <font color='#ff0000' ><b>*</b></font></string>
    <string name="applicant_AccommodationType_label">Accommodation Type <font color='#ff0000' ><b>*</b></font></string>
    <string name="applicant_HouseSize_label">House Size</string>
    <string name="applicant_IsNameboardseenattheHouse_label">Is Nameboard seen at the House ? <font color='#ff0000' ><b>*</b></font></string>
    <string name="applicant_IsNameboardmismatched_label">Is Nameboard mismatched ? *</string>
    <string name="applicant_ApplicantBackgroundCheck_label">Applicant Background Check</string>
    <string name="applicant_Isapplicanthaveanymajormedicalhistory_label">Is applicant have any major medical history?</string>
    <string name="applicant_Isapplicanthaveanypoliticalconnection_label">Is applicant have any political connection ?</string>
    <string name="applicant_BankName_label">Bank Name</string>
    <string name="applicant_LoanAmount_label">Loan Amount</string>
    <string name="applicant_RunningSince_label">Running Since (Years)</string>
    <string name="applicant_Isanyotherloanrunning_label">Is any other loan running ?</string>
    <string name="applicant_IsInvolvedinNegativeProfile_label">Is Involved in Negative Profile ?</string>
    <string name="applicant_IsAreaNegative_label">Is Area Negative ?</string>
    <string name="applicant_IsCastCommunityDominatedArea_label">Is Cast / Community Dominated Area ?</string>
    <string name="applicant_Latitude_label">Latitude</string>
    <string name="applicant_Longitude_label">Longitude</string>
    <string name="applicant_OtherObservations_label">Other Observations</string>
    <string name="applicant_Co_ApplicantDetails_label">Co-Applicant Details</string>
    <string name="applicant_RCUOwner_label">RCU Owner</string>
    <string name="applicant_MobileNo_label">Mobile No.</string>
    <string name="applicant_relation_label">Relation</string>
    <string name="applicant_VerificationRemark_label">Verification Remark</string>
    <string name="applicant_PersonalInformation_label">Personal Information</string>
    <string name="radio_Yes">Yes</string>
    <string name="radio_No">No</string>
    <string name="applicant_is_office_open_label">Is Office Open at the time of visit ?<font color='#ff0000' ><b>*</b></font></string>
    <string name="applicant_Designation_label">Designation of the person met<font color='#ff0000' ><b>*</b></font></string>
    <string name="applicant_Document_signed_label">Whether document signed/Issued by the authorised Person<font color='#ff0000' ><b>*</b></font></string>
    <string name="applicant_personally_met_with_authorised_label">Whether we personally met with authorised person ?<font color='#ff0000' ><b>*</b></font></string>
    <string name="applicant_authorised_name_label">Authorized Person Name</string>
    <string name="applicant_authorised_person_designation_label">Authorized Person Designation</string>
    <string name="applicant_isAnyProof_label">Is any Proof/ Evidences shown ? <font color='#ff0000' ><b>*</b></font></string>
    <string name="applicant_name_of_document_label">Name of Document</string>
    <string name="applicant_assest_address_confirmed_label">Address Confirm as given <font color='#ff0000' ><b>*</b></font></string>
    <string name="applicant_assest_address_belongs_label">Is this address belongs to applicant ? <font color='#ff0000' ><b>*</b></font></string>
    <string name="applicant_vehicle_verified_label">Vehicle /Equipment Physically Verfied</string>
    <string name="applicant_assets_PersonMet_label">Name of the Person Met <font color='#ff0000' ><b>*</b></font></string>
    <string name="applicant_assets_Relation_Applicant_label">Relation with Applicant <font color='#ff0000' ><b>*</b></font></string>
    <string name="applicant_assets_MobileNoOfPersonMet_label">Mobile No of Person Met</string>
    <string name="applicant_chasis_no_label">Chassis No / Serial No</string>
    <string name="applicant_engine_no_label">Engine No</string>
    <string name="applicant_pump_no_label">Pump No</string>
    <string name="applicant_meter_reading_label">Meter Reading (Hours/KM)</string>
    <string name="applicant_vehiclenumber_label">Vehicle Number</string>
    <string name="applicant_make_manufacture_label">Make / Manufacturer<font color='#ff0000' ><b>*</b></font></string>
    <string name="applicant_Model_label">Model</string>
    <string name="applicant_copy_of_rc_label">Copy of RC / Invoice / Insurance Available</string>
    <string name="applicant_third_party_use_label">Third Party Use</string>
    <string name="applicant_end_use_of_vehicle_label">End Use of the Vehicle / Equipment</string>
    <string name="applicant_when_assets_delivered_label">When Asset was delivered / Installed (Month/Year)</string>
    <string name="login_Txt">Login</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="btn_Login">Login</string>
    <string name="donthaveId">Do not have Account? Signup here</string>
    <string name="changePassword_Txt">Change Password</string>
    <string name="employeecode">Employee Code</string>
    <string name="remark">Remark</string>
    <string name="btn_Signup">Send Request</string>
    <string name="oldPassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="neighbour1Name">Neighbour1 Name</string>
    <string name="neighbour2Name">Neighbour2 Name</string>
    <string name="neighbour1Mobile">Neighbour1 Mobile</string>
    <string name="neighbour2Mobile">Neighbour2 Mobile</string>
    <string name="neighbour1Remark">Neighbour1 Remark</string>
    <string name="neighbour2Remark">Neighbour2 Remark</string>
    <string name="notRecoginsedReason">Reason</string>
    <string name="neighbourreconised">Whether Neighbour Recognised to the Applicant with Photo ?</string>
    <string name="logoutAlert">Are you sure want to Logout?</string>
    <string name="neighbour3Name">Neighbour3 Name</string>
    <string name="neighbour4Name">Neighbour4 Name</string>
    <string name="neighbour3Mobile">Neighbour3 Mobile</string>
    <string name="neighbour4Mobile">Neighbour4 Mobile</string>
    <string name="neighbour3Remark">Neighbour3 Remark</string>
    <string name="neighbour4Remark">Neighbour4 Remark</string>
    <string name="alredayhaveId">Already have Account? Login here</string>
    <string name="verificationfor">Verification For :  </string>
    <string name="address">Address :  </string>
    <string name="mobileNumber">Mobile No :  </string>
    <string name="bank">Bank : </string>
    <string name="product">Product : </string>
    <string name="caseId">CaseId : </string>
    <string name="assignDate">Assign Dt : </string>
    <string name="fitype">Fi Type : </string>
    <string name="totalVerification">Total Verification :</string>
    <string name="refNo">Ref No</string>
    <string name="caseID">Case Id</string>
    <string name="bankName">Bank/NBFC</string>
    <string name="verificationFor">Verification for</string>
    <string name="verificationType">Verification Type</string>
    <string name="applicant">Applicant/ Father Name</string>
    <string name="coapplicant">Co-applicant / Guarantor/ Seller Name</string>
    <string name="addressFor">Address</string>
    <string name="applicantfathername">Applicant/ Father Name</string>
    <string name="productsubproduct">Product/Sub Product</string>
    <string name="officeName">Business / Office Name</string>
    <string name="prepost">Pre/Post</string>
    <string name="loanAmount">Loan Amount</string>
    <string name="triggers">Triggers</string>
    <string name="backendname">Assign By</string>
    <string name="assigndt">Assign Dt</string>
    <string name="status">Status</string>
    <string name="remarks">Remarks</string>
    <string name="save">Save</string>
    <string name="click_to_upload">Click to Upload</string>
    <string name="upload">Upload</string>
    <string name="option_gallery">Gallery</string>
    <string name="option_camera">Camera</string>
    <string name="dashboard">Dashboard</string>
</resources>